# src/main/kotlin/com/sc7258/springshopflyway/domain/review/ReviewRepository.kt
@@ -1,0 +1,8 @@
+package com.sc7258.springshopflyway.domain.review
+
+import org.springframework.data.jpa.repository.JpaRepository
+
+interface ReviewRepository : JpaRepository<Review, Long> {
+    fun existsByMemberEmailAndBookId(email: String, bookId: Long): Boolean
+    fun findAllByBookIdOrderByCreatedAtDesc(bookId: Long): List<Review>
+}
